--- a/src/app/dashboard/couse-club-layout/courses/courses.component.html
+++ b/src/app/dashboard/couse-club-layout/courses/courses.component.html
@@ -5,11 +5,11 @@
             </span>
         </div>
         <div class="flex-container">
-            <mat-form-field appearance="standard">
+            <mat-form-field>
                 <mat-label>COURSE NAME</mat-label>
                 <input matInput formControlName="CourseName" placeholder="COURSE NAME" required>
             </mat-form-field>
-            <mat-form-field appearance="standard">
+            <mat-form-field>
                 <mat-label># OF HOLES</mat-label>
                 <input matInput formControlName="NumOfHoles" placeholder="# OF HOLES" required type="number">
             </mat-form-field>
