--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,11 +1,11 @@
 <div class="auth-container">
 	<form [formGroup]="formGroup" class="flex-container" autocomplete="off">
-		<mat-form-field appearance="standard">
+		<mat-form-field>
 			<mat-label>EMAIL</mat-label>
 			<input matInput formControlName="Email" placeholder="EMAIL" type="email" required>
 			<mat-icon matSuffix>email</mat-icon>
 		</mat-form-field>
-		<mat-form-field appearance="standard">
+		<mat-form-field>
 			<mat-label>PASSWORD</mat-label>
 			<input matInput formControlName="Password" placeholder="PASSWORD" type="password" required>
 			<mat-icon matSuffix>lock</mat-icon>
