--- a/src/app/auth/reset/reset.component.html
+++ b/src/app/auth/reset/reset.component.html
@@ -1,6 +1,6 @@
 <div class="auth-container">
     <form [formGroup]="formGroup" class="flex-container" autocomplete="off">
-        <mat-form-field appearance="standard">
+        <mat-form-field>
             <mat-label>EMAIL</mat-label>
             <input matInput formControlName="Email" placeholder="EMAIL" type="email" required>
         </mat-form-field>
