--- a/src/app/dashboard/profile/profile/profile.component.html
+++ b/src/app/dashboard/profile/profile/profile.component.html
@@ -1,18 +1,18 @@
 <div class="form-container">
     <form [formGroup]="formGroup" class="flex-container" autocomplete="off">
-        <mat-form-field appearance="standard">
+        <mat-form-field>
             <mat-label>FIRST NAME</mat-label>
             <input matInput formControlName="FirstName" placeholder="FIRST NAME" required>
         </mat-form-field>
-        <mat-form-field appearance="standard">
+        <mat-form-field>
             <mat-label>LAST NAME</mat-label>
             <input matInput formControlName="LastName" placeholder="LAST NAME" required>
         </mat-form-field>
-        <mat-form-field appearance="standard">
+        <mat-form-field>
             <mat-label>PHONE NUMBER</mat-label>
             <input matInput formControlName="PhoneNumber" placeholder="PHONE NUMBER" type="tel">
         </mat-form-field>
-        <mat-form-field appearance="standard">
+        <mat-form-field>
             <mat-label>EMAIL</mat-label>
             <input matInput formControlName="Email" placeholder="EMAIL" type="email" required>
         </mat-form-field>
