--- a/src/app/dashboard/couse-club-layout/holes/holes.component.html
+++ b/src/app/dashboard/couse-club-layout/holes/holes.component.html
@@ -1,4 +1,16 @@
 <div class="form-container">
+
+    <form [formGroup]="formGroup" autocomplete="off" *ngIf="showGrid">
+        <mat-form-field>
+            <mat-label>FILTER BY COURSE</mat-label>
+            <mat-select formControlName="CourseName" placeholder="FILTER BY COURSE"
+                (selectionChange)="onFilterCourse_Change($event)">
+                <mat-option *ngFor="let course of vmCourses" [value]="course.coursename">
+                    {{ course.coursename }}</mat-option>
+            </mat-select>
+        </mat-form-field>
+    </form>
+
     <form [formGroup]="formGroup_multi" autocomplete="off" *ngIf="!showGrid">
         <div class="dashboard-container">
             <span class="dashboard-container-title"> CREATE MULTIPLE HOLES
@@ -7,8 +19,8 @@
         <div class="flex-container">
             <mat-form-field>
                 <mat-label>COURSE NAME</mat-label>
-                <mat-select formControlName="CourseName">
-                    <mat-option *ngFor="let course of vmCourses" [value]="course.id">
+                <mat-select formControlName="CourseName" required placeholder="Course Name">
+                    <mat-option *ngFor="let course of vmCourses" [value]="course.coursename">
                         {{ course.coursename }}</mat-option>
                 </mat-select>
             </mat-form-field>
@@ -31,8 +43,8 @@
         <div class="flex-container">
             <mat-form-field>
                 <mat-label>COURSE NAME</mat-label>
-                <mat-select formControlName="CourseName">
-                    <mat-option *ngFor="let course of vmCourses" [value]="course.id">
+                <mat-select formControlName="CourseName" required placeholder="Course Name">
+                    <mat-option *ngFor="let course of vmCourses" [value]="course.coursename">
                         {{ course.coursename }}</mat-option>
                 </mat-select>
             </mat-form-field>
@@ -74,7 +86,7 @@
         </ng-container>
 
         <ng-container matColumnDef="holenum">
-            <th mat-header-cell *matHeaderCellDef> Holes # </th>
+            <th mat-header-cell *matHeaderCellDef> Hole # </th>
             <td mat-cell *matCellDef="let element"> {{element.holenum}} </td>
         </ng-container>
 
