--- a/src/assets/grid-styles.scss
+++ b/src/assets/grid-styles.scss
@@ -33,4 +33,8 @@
     .action-column {
         width: 208px !important;
     }
+
+    .table-cell-red {
+        background-color: theme-color($nobetween-app-theme, warn, 800) !important;
+    }
 }
