--- a/src/app/dashboard/account-management/account-management.component.html
+++ b/src/app/dashboard/account-management/account-management.component.html
@@ -3,6 +3,17 @@
         <span class="dashboard-container-title"> {{ accountStatusTxt }}
         </span>
     </div>
+
+    <form [formGroup]="formGroup" autocomplete="off" *ngIf="showGrid" class="hide-hint">
+        <mat-form-field *ngIf="showGrid">
+            <mat-label>FILTER: {{ activeFilter }} </mat-label>
+            <mat-select formControlName="Filter">
+                <mat-option *ngFor="let filter of vmFilters" [value]="filter.value">
+                    {{ filter.label }}</mat-option>
+            </mat-select>
+        </mat-form-field>
+    </form>
+
     <form [formGroup]="formGroup" autocomplete="off" *ngIf="!showGrid">
         <div class="flex-container">
             <mat-form-field>
@@ -52,15 +63,7 @@
 
         <ng-container matColumnDef="statuslink">
             <th mat-header-cell *matHeaderCellDef class="action-column">
-                <form [formGroup]="formGroup" autocomplete="off">
-                    <mat-form-field *ngIf="showGrid">
-                        <mat-label>FILTER: {{ activeFilter }} </mat-label>
-                        <mat-select formControlName="Filter">
-                            <mat-option *ngFor="let filter of vmFilters" [value]="filter.value">
-                                {{ filter.label }}</mat-option>
-                        </mat-select>
-                    </mat-form-field>
-                </form>
+
             </th>
             <td mat-cell *matCellDef="let element">
                 <button type="button" mat-button color="accent" (click)="onStatus_Click(element)">
