--- a/src/app/dashboard/couse-club-layout/geofence-area/geofence-area.component.html
+++ b/src/app/dashboard/couse-club-layout/geofence-area/geofence-area.component.html
@@ -1,24 +1,22 @@
 <div class="form-container">
-    <form [formGroup]="formGroup" autocomplete="off" *ngIf="showGrid">
-        <div class="borderless-flex-container">
-            <mat-form-field>
-                <mat-label>FILTER BY COURSE</mat-label>
-                <mat-select formControlName="CourseNameFilter" placeholder="FILTER BY COURSE"
-                    (selectionChange)="onFilterCourse_Change($event)">
-                    <mat-option *ngFor="let course of vmCourses" [value]="course.coursename">
-                        {{ course.coursename }}</mat-option>
-                </mat-select>
-            </mat-form-field>
+    <form [formGroup]="formGroup" autocomplete="off" *ngIf="showGrid" class="form-container">
+        <mat-form-field>
+            <mat-label>FILTER BY COURSE</mat-label>
+            <mat-select formControlName="CourseNameFilter" placeholder="FILTER BY COURSE"
+                (selectionChange)="onFilterCourse_Change($event)">
+                <mat-option *ngFor="let course of vmCourses" [value]="course.coursename">
+                    {{ course.coursename }}</mat-option>
+            </mat-select>
+        </mat-form-field>
 
-            <mat-form-field>
-                <mat-label>FILTER BY HOLE</mat-label>
-                <mat-select formControlName="HoleNumberFilter" placeholder="FILTER BY HOLE"
-                    (selectionChange)="onFilterHole_Change($event)">
-                    <mat-option *ngFor="let holes of vmHoles" [value]="holes.id">
-                        {{ holes.holenum }}</mat-option>
-                </mat-select>
-            </mat-form-field>
-        </div>
+        <mat-form-field class="hide-hint">
+            <mat-label>FILTER BY HOLE</mat-label>
+            <mat-select formControlName="HoleNumberFilter" placeholder="FILTER BY HOLE"
+                (selectionChange)="onFilterHole_Change($event)">
+                <mat-option *ngFor="let holes of vmHoles" [value]="holes.id">
+                    {{ holes.holenum }}</mat-option>
+            </mat-select>
+        </mat-form-field>
     </form>
 
     <form [formGroup]="formGroup" autocomplete="off" *ngIf="!showGrid">
@@ -80,10 +78,10 @@
             </td>
         </ng-container>
 
-        <ng-container matColumnDef="type">
+        <ng-container matColumnDef="geofencetype">
             <th mat-header-cell *matHeaderCellDef> Type </th>
             <td mat-cell *matCellDef="let element">
-                {{element.type}} </td>
+                {{element.geofencetype}} </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
