--- a/src/assets/grid-styles.scss
+++ b/src/assets/grid-styles.scss
@@ -1,10 +1,8 @@
 @import 'themes';
 
 .mat-mdc-table {
-    width: 95%;
     border: 1px solid theme-color($nobetween-app-theme, primary, 300) !important;
-    ;
-    margin: 0 auto;
+    min-width: unset !important;
 
     .mat-mdc-header-cell {
         background-color: theme-color($nobetween-app-theme, primary, 900) !important;
@@ -12,8 +10,12 @@
         ;
         border-left: 1px solid theme-color($nobetween-app-theme, primary, 300) !important;
         border-bottom: 1px solid theme-color($nobetween-app-theme, primary, 300) !important;
-        padding-left: 8px !important;
         font-size: 14px;
+
+        padding-left: 8px !important;
+        padding-right: 8px !important;
+        padding-top: 0 !important;
+        padding-bottom: 0 !important;
     }
 
     .mat-mdc-row:nth-child(odd) {
